changed Icon style and fixed errors

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -45,16 +45,17 @@
 }
 
 .logo-icon {
-  width: 2.5rem;
+  width: 4rem;
   height: 2.5rem;
-  background-color: #2563eb;
+  background-color: #355bad;
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 0.875rem;
+  font-style: italic;
 }
 
 .sidebar-close {
